@@ -1,3 +1,10 @@
+2007-05-01 Borut Razem <borut.razem AT siol.net>
+
+	* src/SDCCicode.c:
+	  fixed bug #1710507: --i-code-in-asm makes compile fail
+	  all iCode comments are now one liners
+	* src/mcs51/gen.c: fixed memory leak
+
 2007-05-01 Raphael Neider <rneider AT web.de>
 
 	* device/lib/pic/libdev/*.c
